# llm-zoomcamp-2026-code

./: .gitignore  README.md  TheAgenticLoop.ipynb  main.py  notebook.ipynb  pyproject.toml  rag.ipynb  sqlitesearch_rag_ingest.ipynb
01/: TheAgenticLoop.ipynb  agents.ipynb  ingest.py  notebook.ipynb  rag_helper.py  rag_helper_homework.py  sqlitesearch_rag.ipynb
01/homework_week1_Agents/: homework_TheAgenticLoop.ipynb  rag_helper_homework.py  rag_homework.ipynb
